bk_ida/gobmkida/c0/gtp_known_command
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/gtp_known_command/src/interface/play_gtp.c:3828:14: error: use of undeclared identifier 'commands_0'; did you mean 'commands'?
for ( k = 0; commands_0[k].name; ++k ) 
             ^~~~~~~~~~
             commands
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/gtp_known_command/src/interface/play_gtp.c:164:27: note: 'commands' declared here
static struct gtp_command commands[] = {
                          ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/gtp_known_command/src/interface/play_gtp.c:3830:24: error: use of undeclared identifier 'commands_0'; did you mean 'commands'?
if ( !strcmp( command, commands_0[k].name) ) 
                       ^~~~~~~~~~
                       commands
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/gtp_known_command/src/interface/play_gtp.c:164:27: note: 'commands' declared here
static struct gtp_command commands[] = {
                          ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/gtp_known_command/src/obj/2/play_gtp.o] Error 1
